chore: styling should be scoped to Example 6 only - to avoid the SASS styling to overflow to Material Icons page, we should scope the styling to only the grid 6

--- a/examples/vite-demo-vanilla-bundle/src/examples/example06.scss
+++ b/examples/vite-demo-vanilla-bundle/src/examples/example06.scss
@@ -1,24 +1,26 @@
 // @import '@slickgrid-universal/common/dist/styles/sass/slickgrid-theme-salesforce.scss';
 @import '@slickgrid-universal/common/dist/styles/sass/sass-utilities.scss';
 
-.mdi-file-pdf-outline {
-  /** 1. use `filter` color */
-  // filter: invert(62%) sepia(93%) saturate(5654%) hue-rotate(325deg) brightness(100%) contrast(90%);
+.grid6 {
+  .mdi-file-pdf-outline {
+    /** 1. use `filter` color */
+    // filter: invert(62%) sepia(93%) saturate(5654%) hue-rotate(325deg) brightness(100%) contrast(90%);
 
-  /** 2. or use the SASS @mixin that will produce the `filter` color */
-  @include recolor(#f14668, 0.9);
-}
+    /** 2. or use the SASS @mixin that will produce the `filter` color */
+    @include recolor(#f14668, 0.9);
+  }
 
-.mdi-folder, .mdi-folder-open {
-  @include recolor(#ffa500, 0.9);
-}
-.mdi-file-music-outline {
-  @include recolor(#3298dc, 0.9);
-}
-.mdi-file-excel-outline {
-  @include recolor(#1E9F75, 0.9);
-}
-.mdi-file-document-outline,
-.mdi-file-question-outline {
-  @include recolor(#686868, 0.9);
+  .mdi-folder, .mdi-folder-open {
+    @include recolor(#ffa500, 0.9);
+  }
+  .mdi-file-music-outline {
+    @include recolor(#3298dc, 0.9);
+  }
+  .mdi-file-excel-outline {
+    @include recolor(#1E9F75, 0.9);
+  }
+  .mdi-file-document-outline,
+  .mdi-file-question-outline {
+    @include recolor(#686868, 0.9);
+  }
 }
